# rtlsdr433-native-gpl

./: .gitignore  CMakeLists.txt  README.md  android_bridge.c  librtlsdr_andro.c  librtlsdr_andro.h  libusb_config.h  rtlsdr433.cpp  rtlsdr_andro.h
libusb-andro/libusb/: config.h
libusb-andro/libusb/os/: linux_usbfs.c
rtl-sdr/include/: rtl-sdr.h  rtlsdr_i2c.h  tuner_r82xx.h
rtl-sdr/src/: librtlsdr.c  librtlsdr.c.bak  tuner_e4k.c  tuner_r82xx.c  tuner_r82xx.c.bak
rtl-sdr/src/convenience/: convenience.c  convenience.h
rtl433/include/: rtl_433.h
rtl433/src/: output_rtltcp.c  rtl_433.c  sdr.c
rtl433/src/devices/: geevon_tx19.c  govee_h5059.c  sainlogic_sa8.c  thermopro_tp211b.c  thermopro_tp862b.c
